--- a/resume.html
+++ b/resume.html
@@ -113,7 +113,7 @@
 
                         <div class="resume_box">
                             <span class="resume_date">2016-2018</span>
-                            <p class="resume_box_title">Highet Secondary</p>
+                            <p class="resume_box_title">Higher Secondary</p>
                             <p class="resume_conpany">Kathmandu Model Higher Secondary School</p>
                         </div>
 
